namespace/media/jellystat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellystat
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellystat
  template:
    metadata:
      labels:
        app: jellystat
    spec:
      runtimeClassName: youki
      containers:
        - name: jellystat
          image: docker.io/cyfershepard/jellystat:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /app/backend/backup-data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellystat-config
