namespace/media/jellystat/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellystat-postgres
spec:
  serviceName: "jellystat-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: jellystat-postgres
  template:
    metadata:
      labels:
        app: jellystat-postgres
    spec:
      containers:
        - name: jellystat-postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
