namespace/media/jellystat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat
  namespace: media
spec:
  selector:
    app: jellystat
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: jellystat-ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jellystat-postgres
  namespace: media
spec:
  clusterIP: None
  selector:
    app: jellystat-postgres
  ports:
    - port: 5432
      name: postgres
