namespace/media/jellystat/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellystat-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellystat.oglesby.io`)
      kind: Rule
      services:
        - name: jellystat
          port: 3000
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellystat-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellystat.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: jellystat
          port: 3000
